# yadro_tape

./: CMakeLists.txt  README.MD  build.sh  clear_dirs.sh  config_parser.h  main.cpp  merge_sort.cpp  merge_sort.h  tape.h  tape.ini  tape_impl.cpp  tape_impl.h  test_tape  utils.h  utils.hpp
src/: main.cpp  merge_sort.cpp  merge_sort.h  tape.h  tape_impl.cpp  tape_impl.h  utils.hpp
tests/: test.cpp
tests/test_data/: unsort_data
